--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,16 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
+<!--    <item-->
+<!--        android:id="@+id/navigation_modules"-->
+<!--        android:title="@string/title_viewmods"/>-->
+
+<!--    <item-->
+<!--        android:id="@+id/navigation_calendar"-->
+<!--        android:title="@string/title_calendar"/>-->
+
+<!--    <item-->
+<!--        android:id="@+id/navigation_add"-->
+<!--        android:title="@string/title_add"/>-->
+
 </menu>
