--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,29 +3,22 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home_black"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_calendar"
+        android:icon="@drawable/ic_calendar_black"
+        android:title="@string/title_calendar" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_viewmods"
+        android:icon="@drawable/ic_modules_black"
+        android:title="@string/title_viewmods" />
 
-<!--    <item-->
-<!--        android:id="@+id/navigation_modules"-->
-<!--        android:title="@string/title_viewmods"/>-->
-
-<!--    <item-->
-<!--        android:id="@+id/navigation_calendar"-->
-<!--        android:title="@string/title_calendar"/>-->
-
-<!--    <item-->
-<!--        android:id="@+id/navigation_add"-->
-<!--        android:title="@string/title_add"/>-->
+    <item
+        android:id="@+id/navigation_addtask"
+        android:icon="@drawable/ic_add_black"
+        android:title="@string/title_addtask" />
 
 </menu>
