--- a/app/src/main/res/layout/fragment_addtask.xml
+++ b/app/src/main/res/layout/fragment_addtask.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.addtask.AddTaskFragment">
+    tools:context=".ui.addtask.AddTaskFragment"
+    android:orientation="vertical"
+    android:padding="16dp"
+    >
 
     <TextView
         android:id="@+id/text_addtask"
@@ -20,4 +23,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:gravity="center_horizontal" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <AutoCompleteTextView
+        android:id="@+id/actv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Select a module"
+        android:completionThreshold="1"
+        android:dropDownAnchor="@id/actv"
+        android:completionHint="Select a module"
+        />
+</LinearLayout>
