--- a/app/src/main/res/layout/fragment_addtask.xml
+++ b/app/src/main/res/layout/fragment_addtask.xml
@@ -1,36 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.addtask.AddTaskFragment"
-    android:orientation="vertical"
-    android:padding="16dp"
-    >
+    android:layout_height="wrap_content"
+    android:id="@+id/addtask_scrollview"
+    android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/text_addtask"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        android:layout_height="match_parent"
+        tools:context=".ui.addtask.AddTaskFragment"
+        android:orientation="vertical"
+        android:padding="5dp">
 
-    <AutoCompleteTextView
-        android:id="@+id/actv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Select a module"
-        android:completionThreshold="1"
-        android:dropDownAnchor="@id/actv"
-        android:completionHint="Select a module"
-        />
-</LinearLayout>
+        <!--Task Name-->
+        <LinearLayout
+            android:id="@+id/task_name_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent">
+            <TextView
+                android:id="@+id/task_name_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="@string/task_name_label"
+                android:gravity="left"/>
+            <EditText
+                android:id="@+id/task_name_input"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <!--Task Description-->
+        <LinearLayout
+            android:id="@+id/task_description_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/task_description_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="@string/task_description_label"
+                android:gravity="left"/>
+            <EditText
+                android:id="@+id/task_description_input"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </LinearLayout>
+
+        <!--Module-->
+        <LinearLayout
+            android:id="@+id/module_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/module_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/module_label"
+                android:textSize="20sp"
+                android:gravity="left" />
+            <AutoCompleteTextView
+                android:id="@+id/module_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Start typing to select module"
+                android:completionThreshold="5" />
+        </LinearLayout>
+
+        <!--Due Date-->
+        <LinearLayout
+            android:id="@+id/due_date_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/due_date_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/due_date_label"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/due_date_input"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"/>
+                <Button
+                    android:id="@+id/select_date_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/select_date_label"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <!--Due Time-->
+        <LinearLayout
+            android:id="@+id/due_time_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/due_time_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/due_time_label"
+                android:textSize="20sp"
+                android:gravity="left" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/due_time_input"
+                    android:layout_width="200dp"
+                    android:layout_height="match_parent"/>
+                <Button
+                    android:id="@+id/select_time_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/select_time_label"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <!--Importance Level-->
+        <LinearLayout
+            android:id="@+id/importance_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="10dp">
+            <TextView
+                android:id="@+id/importance_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/importance_label"
+                android:textSize="20sp"
+                android:gravity="left" />
+            <RatingBar
+                android:id="@+id/importance_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="3"
+                android:stepSize="1"
+                android:isIndicator="true" />
+
+        </LinearLayout>
+
+        <!--Cue Reminders-->
+<!--        <LinearLayout-->
+<!--            android:id="@+id/reminder_block"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:padding="10dp">-->
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/cue_reminders_label"-->
+<!--                android:textSize="20sp"-->
+<!--                android:gravity="left"/>-->
+<!--            <Spinner-->
+<!--                android:id="@+id/cue_reminders"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content" />-->
+<!--        </LinearLayout>-->
+
+        <!--Buttons-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:padding="10dp">
+            <Button
+                android:id="@+id/clear_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/clear_button_label"/>
+            <Button
+                android:id="@+id/addtask_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorPrimary"
+                android:textColor="@color/white"
+                android:text="@string/add_task_button_label"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
