--- a/app/src/main/res/layout/activity_getstarted.xml
+++ b/app/src/main/res/layout/activity_getstarted.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.todo.GetStarted">
+    tools:context="com.example.todo.ui.getstarted.GetStarted">
 
     <ImageView
         android:id="@+id/welcome_screen"
@@ -70,7 +70,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/getstarted_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
