--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -78,6 +78,7 @@
         android:paddingLeft="12dp"/>
 
     <Button
+        android:id="@+id/setup_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
