Fix scrolling issue in add task fragment

--- a/app/src/main/res/layout/fragment_addtask.xml
+++ b/app/src/main/res/layout/fragment_addtask.xml
@@ -4,10 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:id="@+id/addtask_scrollview"
-    android:fillViewport="true"
-    android:focusableInTouchMode="true">
+    android:isScrollContainer="false">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -166,7 +165,7 @@
 
         </LinearLayout>
 
-        <!--Cue Reminders-->
+<!--        Cue Reminders-->
 <!--        <LinearLayout-->
 <!--            android:id="@+id/reminder_block"-->
 <!--            android:layout_width="match_parent"-->
@@ -205,6 +204,10 @@
                 android:textColor="@color/white"
                 android:text="@string/add_task_button_label"/>
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
 
     </LinearLayout>
 
