--- a/app/src/main/res/layout/fragment_viewmods.xml
+++ b/app/src/main/res/layout/fragment_viewmods.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.viewmods.ViewModsFragment"
-    android:id="@+id/view_mods_scrollview"
-    android:layout_marginTop="5dp"
-    android:layout_marginEnd="5dp"
-    android:layout_marginStart="5dp"
-    android:layout_marginRight="5dp"
-    android:orientation="vertical">
+    tools:context=".ui.viewmods.ViewModsFragment">
 
-    <ListView
-        android:id="@+id/uncompleted_task_list"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:listitem="@layout/mods" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
