--- a/app/src/main/res/layout/mods.xml
+++ b/app/src/main/res/layout/mods.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginRight="8dp"
     app:cardBackgroundColor="#89C0E4">
 
     <RelativeLayout
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginRight="5dp"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -44,7 +43,7 @@
             android:layout_below="@id/task_title"
             android:text="Duedate"
             android:textColor="@color/black"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/deadline_time"
@@ -53,7 +52,7 @@
             android:layout_below="@id/deadline_date"
             android:text="Time"
             android:textColor="@color/black"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </RelativeLayout>
 
 
