--- a/app/src/main/res/layout/fragment_viewmods.xml
+++ b/app/src/main/res/layout/fragment_viewmods.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.viewmods.ViewModsFragment">
+    tools:context=".ui.viewmods.ViewModsFragment"
+    android:orientation="horizontal">
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        tools:ignore="MissingConstraints"
+        android:layout_alignParentRight="true">
+
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -18,4 +29,4 @@
         tools:listitem="@layout/mods" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
