--- a/app/src/main/res/layout/fragment_viewmods.xml
+++ b/app/src/main/res/layout/fragment_viewmods.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp"
+        android:background="#ECEFF1"
         tools:listitem="@layout/mods" />
 
 
