--- a/app/src/main/res/layout/fragment_viewmods.xml
+++ b/app/src/main/res/layout/fragment_viewmods.xml
@@ -1,33 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.viewmods.ViewModsFragment"
-    android:orientation="horizontal">
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        tools:ignore="MissingConstraints"
-        android:layout_alignParentRight="true">
-
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp"
-        android:background="#ECEFF1"
-        tools:listitem="@layout/mods" />
+        android:layout_height="wrap_content"
+        android:background="#ECEFF1" />
 
+    <Button
+        android:id="@+id/fab"
+        android:background="@color/colorPrimary"
+        android:text="Add new Module"
+        android:textSize="18dp"
+        android:textColor="@color/white"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </Button>
 
-</RelativeLayout>
+</LinearLayout>
