--- a/app/src/main/res/layout/fragment_viewmods.xml
+++ b/app/src/main/res/layout/fragment_viewmods.xml
@@ -13,7 +13,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ECEFF1" />
+        android:background="@color/background" />
 
     <Button
         android:id="@+id/fab"
