updated splash screen ui

--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center">
+        android:gravity="center"
+        android:paddingTop="25dp">
 
     </TextView>
 
@@ -31,27 +32,27 @@
 
     </TextView>
 
-    <TextView
-        android:id="@+id/quote_of_the_day"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center">
+<!--    <TextView-->
+<!--        android:id="@+id/quote_of_the_day"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:gravity="center"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:textSize="20dp"-->
+<!--        android:textStyle="bold">-->
+<!--    </TextView>-->
 
-    </TextView>
 
     <TextView
         android:id="@+id/quote_field"
-        android:textSize="20dp"
-        android:textStyle="italic"
-        android:textColor="@color/black"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="393dp"
+        android:layout_height="79dp"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/attribution_field"
