--- a/app/src/main/res/drawable/splash_screen_background.xml
+++ b/app/src/main/res/drawable/splash_screen_background.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <bitmap
-            android:src="@drawable/ss_background_test"
+            android:src="@drawable/ss_background"
             android:gravity="center"/>
         <!--android:src="@drawable/ss_background"-->
 
