--- a/app/src/main/res/layout/calendar_row_items.xml
+++ b/app/src/main/res/layout/calendar_row_items.xml
@@ -4,17 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dp"
-    android:background="#FFFFFF"
+    android:padding="15dp"
+    android:background="@color/white"
     android:layout_marginBottom="1dp">
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="left"
         android:gravity="left"
-        android:layout_weight="2">
+        android:layout_weight="4">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,34 +35,30 @@
                 android:text="!!!"
                 android:textSize="18dp"
                 android:paddingLeft="5dp"
-                android:textColor="@color/colorAccent"
+                android:textColor="@color/colorPrimary"
                 android:textStyle="bold"/>
         </LinearLayout>
         <TextView
             android:id="@+id/calendar_task_description"
             android:text="just kill me now please"
+            android:textStyle="italic"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="right"
-        android:gravity="right"
-        android:orientation="vertical"
-        android:layout_weight="1">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="Information Systems and Programming"
             android:id="@+id/calendar_module_name" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/calendar_due_time"
-            android:layout_gravity="left"
-            android:text="14:30"/>
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:id="@+id/calendar_due_time"
+        android:textSize="18dp"
+        android:layout_gravity="center_horizontal"
+        android:text="14:30"/>
 
 
 </LinearLayout>
