--- a/app/src/main/res/layout/fragment_addtask.xml
+++ b/app/src/main/res/layout/fragment_addtask.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.addtask.AddTaskFragment"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="10dp">
 
         <!--Task Name-->
         <LinearLayout
@@ -28,7 +28,7 @@
                 android:id="@+id/task_name_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:text="@string/task_name_label"
                 android:gravity="left"/>
             <EditText
@@ -48,7 +48,7 @@
                 android:id="@+id/task_description_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:text="@string/task_description_label"
                 android:gravity="left"/>
             <EditText
@@ -69,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/module_label"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="left" />
             <Spinner
                 android:id="@+id/module_name"
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="@string/due_date_label"
-                android:textSize="20sp" />
+                android:textSize="18dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/due_time_label"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="left" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -155,7 +155,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="@string/importance_label"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:layout_marginTop="10dp"/>
             <RatingBar
                 android:id="@+id/importance_input"
@@ -166,25 +166,6 @@
                 android:isIndicator="false" />
 
         </LinearLayout>
-
-<!--        Cue Reminders-->
-<!--        <LinearLayout-->
-<!--            android:id="@+id/reminder_block"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:padding="10dp">-->
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="@string/cue_reminders_label"-->
-<!--                android:textSize="20sp"-->
-<!--                android:gravity="left"/>-->
-<!--            <Spinner-->
-<!--                android:id="@+id/cue_reminders"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content" />-->
-<!--        </LinearLayout>-->
 
         <!--Buttons-->
         <LinearLayout
