--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -17,9 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:mcv_showOtherDates="all"
-        app:mcv_selectionColor="#00F"
-        tools:ignore="MissingConstraints"
-        android:layout_marginBottom="1dp"/>
+        app:mcv_selectionColor="@color/colorAccent"
+        android:layout_marginBottom="1dp"
+        app:mcv_tileHeight="40dp"/>
 
     <TextView
         android:layout_width="match_parent"
