--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -1,55 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/splash_screen_background"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/welcome"
-        android:textSize="20dp"
-        android:layout_marginTop="1in"
+    <LinearLayout
+        android:id="@+id/welcome_block"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:paddingTop="25dp">
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/quote_block">
 
-    </TextView>
+        <TextView
+            android:id="@+id/welcome"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/welcome_back"/>
 
+        <TextView
+            android:id="@+id/user"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/user"
+            android:gravity="center" />
 
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/user"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_marginBottom="1in"
+    <LinearLayout
+        android:id="@+id/quote_block"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center">
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_block"
+        app:layout_constraintBottom_toTopOf="@id/book_icon">
 
 
-    </TextView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/quote_of_the_day"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:fontFamily="@font/nothing_you_could_do"/>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:src="@drawable/quotation_marks" />
+
+            <ImageView
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/horizontal_line"/>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/quote_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center"
+            android:padding="10dp"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/attribution_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:gravity="center"
+            android:padding="10dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="350dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/horizontal_line" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="24dp"
+                android:src="@drawable/quotation_marks"
+                android:rotation="180"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/book_icon"
+        android:layout_width="192dp"
+        android:layout_height="147dp"
+        android:layout_marginEnd="108dp"
+        android:layout_marginRight="108dp"
+        android:src="@drawable/book"
+        app:layout_constraintBottom_toTopOf="@id/zenquotes_attribution"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/quote_block" />
 
     <TextView
-        android:id="@+id/quote_field"
-        android:layout_width="393dp"
-        android:layout_height="79dp"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:textStyle="italic" />
-
-    <TextView
-        android:id="@+id/attribution_field"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        android:textStyle="italic"
+        android:id="@+id/zenquotes_attribution"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:gravity="center" />
+        android:textAlignment="center"
+        android:text="@string/zenquotes_attribution"
+        app:layout_constraintTop_toBottomOf="@id/book_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center_horizontal" />
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
