--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,9 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/open_sans_bold</item>
     </style>
-    <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/splash_screen_background</item>
-    </style>
+<!--    <style name="SplashScreen" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--        <item name="android:fontFamily">@font/nothing_you_could_do</item>-->
+<!--    </style>-->
 </resources>
